[package]
name = "pyo3-subclasses"
version = "0.1.0"
authors = ["David Hewitt <1939362+davidhewitt@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

[dependencies]
pyo3 = { git = "https://github.com/davidhewitt/pyo3", branch = "pyclass-impl-flags" }

[dev-dependencies]
pyo3 = { git = "https://github.com/davidhewitt/pyo3", branch = "pyclass-impl-flags", features = ["auto-initialize"] }
